# real-estate-monitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docker/backend/: Dockerfile
docker/scraper/: Dockerfile
migrations/: env.py
migrations/versions/: 57c80a37d329_.py  86857f18b023_create_properties_table.py
src/: main.py
src/api/: routes_health.py
src/app/: db.py  main.py
src/app/api/: __init__.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: health.py  properties.py
src/app/core/: config.py
src/core/: config.py
src/models/: alerts.py  enums.py  property.py  scraping_job.py
src/schemas/: property.py
src/scrapers/: fetcher.py  main.py  models.py  settings.py
