[tool.poetry]
name = "real-estate-monitor"
version = "0.1.0"
description = "Aplikacja monitorujaca ceny nieruchomosci z Otodom"
authors = ["Dorota Zelazkiewicz <dorota.elen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.5.3"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
pydantic = "^2.12.4"
beautifulsoup4 = "^4.14.2"
httpx = "^0.28.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
black = "^25.11.0"
isort = "^7.0.0"
pre-commit = "^4.4.0"
ruff = "^0.14.4"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
