[tool.poetry]
name = "real-estate-monitor"
version = "0.1.0"
description = "Aplikacja monitorujaca ceny nieruchomosci z Otodom"
authors = ["Dorota Zelazkiewicz <dorota.elen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.5.3"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
pydantic = "^2.12.4"
beautifulsoup4 = "^4.14.2"
httpx = "^0.28.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
pydantic-settings = "^2.12.0"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.0.0"
redis = "^7.0.1"
kombu = "^5.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
black = "^25.11.0"
isort = "^7.0.0"
pre-commit = "^4.4.0"
ruff = "^0.14.4"
mypy = "^1.18.2"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
files = ["src", "migrations"]
exclude = ["migrations", "venv", ".venv"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "uvicorn.*",
    "sqlalchemy.*",
    "alembic.*",
    "psycopg2.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["migrations/*"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
